# dolo-desktop

./: .gitignore  README.md  index.html  package.json  svelte.config.js  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
public/: style.css  style.css.map
public/type/golos-text/: type.txt
public/type/plex-mono/: type.txt
sass/: _form.scss  _form1.scss  _mixin.scss  _reset.scss  _root.scss  _theme.scss  style.scss
src/: App.svelte  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/component/: CopyButton.svelte  ExportInfo.svelte  NewExport.svelte  ProgressBar.svelte  Settings.svelte
src/utility/: authns.ts  bns.ts  date-next-year.ts  date-today.ts  date-yesterday.ts  format-text-width.ts  generate-serial.ts  interface.ts  store.ts  to-zone.ts
